<resources>
    <string name="app_name">Turismo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="User">Correo Electronico.</string>
    <string name="Password">Password.</string>
    <string name="Usuario">Usuario</string>
    <string name="Seccion">INICIO DE SESIÓN</string>
    <string name="Login">Login</string>
    <string name="Registrase">Registrate</string>
    <string name="registroUser">REGISTRO DE USUARIO</string>
    <string name="repita">Repita Password</string>
    <string name="regUserBtn">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="logo">Logo</string>
    <string name="btnConfirmarVent">Confirmar</string>
    <string name="txtConfirmar">GUARDAR LOS DATOS</string>
    <string name="btnCancelarVent">Cancelar</string>
    <string name="title_activity_menu_principal">Menu Principal</string>
    <string name="imgmenu">menu principal</string>
    <string name="titulopromo">Promocion Turistica de El Salvador</string>
    <string name="imopromo">Promocion imagen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Salir</string>
    <string name="menumsg">BIENVENIDO</string>
    <string name="menumsgcon">PROMOCION TURISTA DE EL SALVADOR</string>
    <string name="correoturismo">turismosv@gmail.com</string>
    <string name="tituliList">PROMOCIONES</string>
    <string name="regresar">Regresar</string>
    <string name="descripcionpromo">DESCRIPCION DE PROMOCION</string>
    <string name="cotizacion">Digite su consulta de cotizacion</string>
    <string name="enviar">Enviar</string>
    <string name="cotizacionT">Cotizacion</string>
    <string name="principal">Menu Principal</string>
    <string name="title_activity_detalle_categ">DetalleCateg</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab_detalle">Detalle</string>
    <string name="tab_ubicacion">Ubicacion</string>
    <string name="tab_cotizacion">Cotizacion</string>
    <string name="fecha">Fecha:</string>
    <string name="descuento">Descuento:</string>
    <string name="contacto">Contacto:</string>
    <string name="tele">Telefono:</string>
    <string name="comercio">Comercio:</string>
    <string name="email">Email:</string>
    <string name="title_activity_map">Map</string>
    <string name="guardarDatos">Preference category</string>
    <string name="TitleCheckLogin">Gurdar Usuario y Contraseña</string>
    <string name="keyChechLogin">loginData</string>
    <string name="DijiteUser">Correo De Login</string>
    <string name="descUser">Se guardar el usuario con que inicio la aplicacion</string>
    <string name="editUserPreferencia">UserPreference</string>
    <string name="ediPassPreference">PassPreference</string>
    <string name="passPrefence">Guardar la Contraseña</string>
    <string name="preferentitle">Guardar Datos de Login</string>
    <string name="titleeduserpref">Usuario (correo)</string>
    <string name="titlePassPreference">Password</string>
    <string name="edistPaa">Password</string>
    <string name="sumaChe">Guarda las Credenceiales de El login</string>
    <string name="ocultar">ocultarflotante</string>
    <string name="titleocultar">Oculta el boton Flotante que aparece en el menu principal</string>
    <string name="confi">Configuraciones</string>
    <string name="title_activity_informacion">informacion</string>
    <string name="tab_informacion">Acerca de</string>
    <string name="tab_cambios">Change Log</string>
    <string name="utec">Desarollado por estudiantes de Universidad Tecnologica de El Salvador,Copyright 2019</string>
    <string name="integrantes">Integrantes:</string>
    <string name="edwin">Edwin Alexander Nolasco González.</string>
    <string name="juan">Juan Francisco Abrego Mendoza.</string>
    <string name="henry">Henry Isaías Quevedo Cisneros.</string>
    <string name="jose">José Armando Villavicencio Guevara.</string>
    <string name="pedro">Pedro Fabrizio Alas Chávez.</string>
    <string name="dev3">Desarrollado para la materia de:</string>
    <string name="materia">Técnicas de calidad de software.</string>
    <string name="impartida">Impartida por:</string>
    <string name="catedratico">Ingeniero José Oswaldo Barrera.</string>
</resources>
