<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preferentitle">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/keyChechLogin"
            android:title="@string/TitleCheckLogin"
           android:summary="@string/sumaChe" />
        <EditTextPreference
            android:dependency="@string/keyChechLogin"
            android:defaultValue="@string/DijiteUser"
            android:key="@string/editUserPreferencia"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/titleeduserpref" />
        <EditTextPreference
            android:defaultValue="@string/edistPaa"
            android:dependency="@string/keyChechLogin"
            android:key="@string/ediPassPreference"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/titlePassPreference" />
    </PreferenceCategory>
</PreferenceScreen>