<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linerFormLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragdesng"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context="com.example.edwin.turismo.FormuLogin">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/img"
        android:contentDescription="@string/logo"
        android:src="@drawable/banner" />

    <TextView
        android:id="@+id/txtInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/Seccion"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorLetra"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lyForm2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/icodis"
            android:contentDescription="@string/Usuario"
            android:src="@drawable/usuario" />

        <EditText
            android:id="@+id/edituser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit"
            android:ems="10"
            android:hint="@string/User"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/colorLetra"
            android:textColorHint="@color/btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyForm3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/icodis"
            android:contentDescription="@string/Password"
            android:src="@drawable/contrasena" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@android:color/background_light"
            android:textColorHint="@color/btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyForm4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/registrarbtn"
            android:text="@string/Registrase"
            android:textColor="@color/colorLetra" />

        <Button
            android:id="@+id/btnLoguin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:text="@string/Login"
            android:textColor="@color/colorLetra" />
    </LinearLayout>
</LinearLayout>

