<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contrVentana"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fragdesng"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTituloVentana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtConfirmar"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorLetra"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/barraGuardar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/lyBntVnt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancVent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:paddingBottom="10dp"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/btnCancelarVent"
            android:textColor="@color/colorLetra"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="43dp" />

        <Button
            android:id="@+id/btnGuarVent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:paddingBottom="10dp"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/btnConfirmarVent"
            android:textColor="@color/colorLetra"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="43dp" />
    </LinearLayout>

</LinearLayout>